--- a/alpine/build.yaml
+++ b/alpine/build.yaml
@@ -1,4 +1,4 @@
-image: ghcr.io/home-assistant/{arch}-base
+image: ghcr.io/home-asst/{arch}-base
 build_from:
   aarch64: "arm64v8/alpine:"
   armv7: "arm32v7/alpine:"
@@ -6,12 +6,12 @@ build_from:
   amd64: "alpine:"
   i386: "i386/alpine:"
 cosign:
-  identity: https://github.com/home-assistant/docker-base/.*
+  identity: https://github.com/home-asst/docker-base/.*
 args:
   BASHIO_VERSION: 0.16.2
-  TEMPIO_VERSION: 2024.11.2
+  TEMPIO_VERSION: 2024.12.1
   S6_OVERLAY_VERSION: 3.1.6.2
   JEMALLOC_VERSION: 5.3.0
 labels:
   io.hass.base.name: alpine
-  org.opencontainers.image.source: https://github.com/home-assistant/docker-base
+  org.opencontainers.image.source: https://github.com/home-asst/docker-base
