--- a/python/3.11/build.yaml
+++ b/python/3.11/build.yaml
@@ -1,17 +1,17 @@
-image: ghcr.io/home-assistant/{arch}-base-python
+image: ghcr.io/home-asst/{arch}-base-python
 build_from:
-  aarch64: "ghcr.io/home-assistant/aarch64-base:"
-  armv7: "ghcr.io/home-assistant/armv7-base:"
-  armhf: "ghcr.io/home-assistant/armhf-base:"
-  amd64: "ghcr.io/home-assistant/amd64-base:"
-  i386: "ghcr.io/home-assistant/i386-base:"
+  aarch64: "ghcr.io/home-asst/aarch64-base:"
+  armv7: "ghcr.io/home-asst/armv7-base:"
+  armhf: "ghcr.io/home-asst/armhf-base:"
+  amd64: "ghcr.io/home-asst/amd64-base:"
+  i386: "ghcr.io/home-asst/i386-base:"
 cosign:
-  base_identity: https://github.com/home-assistant/docker-base/.*
-  identity: https://github.com/home-assistant/docker-base/.*
+  base_identity: https://github.com/home-asst/docker-base/.*
+  identity: https://github.com/home-asst/docker-base/.*
 args:
   PYTHON_VERSION: 3.11.9
   PIP_VERSION: 24.3.1
   GPG_KEY: A035C8C19219BA821ECEA86B64E628F8D684696D
 labels:
   io.hass.base.name: python
-  org.opencontainers.image.source: https://github.com/home-assistant/docker-base
+  org.opencontainers.image.source: https://github.com/home-asst/docker-base
